[tool.poetry]
name = "beets-romanize"
version = "0.1.0"
description = "Beets plugin to transliterate hiragana, katakana, and kanji into romaji."
authors = ["Eric Zhao <21zhaoe@protonmail.com>"]
license = "GPL-3.0-or-later"

packages = [
  { include = "beetsplug" }
]

[tool.poetry.dependencies]
python = "^3.5"
beets = "^1.4.9"
pykakasi = "^2.0.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
