[tool.poetry]
name = "beets-romanize"
version = "0.1.0"
description = "Beets plugin to transliterate hiragana, katakana, and kanji into romaji."
authors = ["Eric Zhao <21zhaoe@protonmail.com>"]
license = "GPL-3.0-or-later"

packages = [
  { include = "beetsplug" }
]

[tool.poetry.dependencies]
python = "^3.5"
beets = "^1.4.9"
cutlet = "^0.1.15"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
flake8 = "^3.8.4"

unidic-lite = { version = "^1.0.7", optional = true }
unidic = { version = "^1.0.3", optional = true }

[tool.poetry.extras]
unidic-lite = ["unidic-lite"]
unidic = ["unidic"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
